SET(TEST_MODULE avid)
ADD_DEFINITIONS(-DMYSQL_SERVER)

SET(AVID_TEST_SRC sample_test.cc)
SET(AVID_HEADER ../)
SET(MYSQL_HEADER ../../../include)

INCLUDE_DIRECTORIES(${AVID_HEADER} ${MYSQL_HEADER})
MYSQL_ADD_EXECUTABLE(avid-test ${AVID_TEST_SRC} ADD_TEST avid-test)
TARGET_LINK_LIBRARIES(avid-test ${Boost_LIBARIES} mysqld mysys pfs_server_stubs ${TEST_MODULE})
TARGET_INCLUDE_DIRECTORIES(avid-test PUBLIC ${AVID_HEADER} ${MYSQL_HEADER})

SET(MYSQLD_EXTRA_SOURCES)
